# sleeptimer

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: release.yml
include/: mainwindow.h
lib/: mainwindow.cpp  mainwindow.ui
src/: main.cpp
